--- a/lotteryapp/package.json
+++ b/lotteryapp/package.json
@@ -6,13 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "compile": "solcjs --abi --include-path node_modules/ --base-path . ./blockchain/contracts/Lottery.sol --output-dir blockchain/build"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.6.0",
     "bulma": "^0.9.4",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "solc": "^0.8.14-fixed",
+    "web3": "^1.7.3"
   },
   "devDependencies": {
     "eslint": "8.15.0",
